--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,12 +20,11 @@
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
-					<li><a href="/archive/">Archives</a></li>
-					<li><a href="/category/">Category</a></li>
-					<li><a href="/read/">Read</a></li>
-					<li><a href="/resume/">Resume</a></li>
-					<li><a href="/about/">About</a></li>
-					<li><a href="/feed.xml">RSS</a></li>
+					<li><a href="/archive/">归档</a></li>
+					<li><a href="/category/">分类</a></li>
+					<li><a href="/series/">连载</a></li>
+					<li><a href="/resume/">简历</a></li>
+					<li><a href="/about/">关于</a></li>
 				</ul>
 			</div>
 		</div>
