加入F&Q页面，为了记录一些小的黑科技。

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,6 +23,7 @@
 					<li><a href="/archive/">归档</a></li>
 					<li><a href="/category/">分类</a></li>
 					<li><a href="/series/">连载</a></li>
+					<li><a href="/faq/">F&Q</a></li>
 					<li><a href="/resume/">简历</a></li>
 					<li><a href="/about/">关于</a></li>
 				</ul>
