--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,8 @@ layout: default
 	<header>
 		<!--文章名称-->
 		<h1 class="post-title">{{ page.title }}</h1>
+
+
 		<!--文章描述，时间和分类-->
 		<p class="desc">
 			<i class="fa fa-calendar"></i>
@@ -13,6 +15,9 @@ layout: default
 			<i class="fa fa-folder-open-o fa-fw"></i>
 			<a href="/category/">{{ page.categories }} </a>
 		</p>
+
+		<a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh"><b>（除非另有声明，本网站采用自由转载-非商用-非衍生-保持署名）-转载务必注明出处</b></a>
+		
 	</header>
 
 	<!--文章内容-->
