--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="row">
-            <div class="col-md-offset-2 col-md-8  main-content">
+            <div class="col-md-offset-2 col-lg-offset-3 col-lg-6 col-md-8  main-content">
                 {{ content }}
             </div>
         </div>
