--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
                 <div class="col-md-offset-2 col-md-8  main-content">
                 	<div  id="searchpcc">
 						<a href="/"><img id="abouthead" src="{{ site.dev.image }}about.png"></a>
-						<p>一个正在老去的90后程序员 --searchpcc</p>
+						<p>守口如瓶，笑脸相迎。 --searchpcc</p>
                 	</div>
                 </div>
         </div>
