--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,6 +24,7 @@
 					<li><a href="/category/">分类</a></li>
 					<li><a href="/series/">连载</a></li>
 					<li><a href="/faq/">F&Q</a></li>
+					<li><a href="/liqi/">利器</a></li>
 					<li><a href="/resume/">简历</a></li>
 					<li><a href="/about/">关于</a></li>
 				</ul>
