--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
 				<ul class="nav navbar-nav">
 					<li><a href="/archive/">归档</a></li>
 					<li><a href="/category/">分类</a></li>
-					<li><a href="/series/">连载</a></li>
+					<li><a href="/books/">阅读</a></li>
 					<li><a href="/faq/">F&Q</a></li>
 					<li><a href="/liqi/">利器</a></li>
 					<li><a href="/resume/">简历</a></li>
