--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,11 @@
     	<div class="row">
                 <div class="col-md-offset-2 col-md-8  main-content">
                 	<div  id="searchpcc">
-						<a href="/"><img id="abouthead" src="{{ site.dev.image }}about.png"></a>
+                        {% if site.model == 'pub' %}
+						<a href="/"><img id="abouthead" src="{{ site.pub.image }}about1.jpg"></a>
+                        {% else %}
+                        <a href="/"><img id="abouthead" src="{{ site.dev.image }}about1.jpg"></a>
+                        {% endif %}
 						<p>守口如瓶，笑脸相迎。 --searchpcc</p>
                 	</div>
                 </div>
